reconfigure name in package.json

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "jwt-auth-mern-template-front-end",
+  "name": "to-be-decided-front-end",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
